sandbox/output
TicketDispenserTest.java:81: error: incompatible types: TurnNumberSequenceRegular cannot be converted to TurnNumberSequence
        TurnNumberSequence regularTurnNumberSequence = new TurnNumberSequenceRegular(2001);
                                                       ^
1 error
